--- a/MovieManagement/MovieManagement.csproj
+++ b/MovieManagement/MovieManagement.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MovieManager.cs" />
+    <Compile Include="PersonManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
