--- a/StaticsDemo/StaticsDemo.csproj
+++ b/StaticsDemo/StaticsDemo.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IntUtil.cs" />
+    <Compile Include="LinqDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringUtil.cs" />
