--- a/SEDC/SEDC.csproj
+++ b/SEDC/SEDC.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assistant.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Proffesor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
