--- a/SEDC/SEDC.csproj
+++ b/SEDC/SEDC.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Proffesor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Staff.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="Subject.cs" />
   </ItemGroup>
