--- a/Homeworks/Stojancho Jefremov/NumToWordsAndCalculator/NumToWordsAndCalculator/NumToWordsAndCalculator.csproj
+++ b/Homeworks/Stojancho Jefremov/NumToWordsAndCalculator/NumToWordsAndCalculator/NumToWordsAndCalculator.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converter.cs" />
+    <Compile Include="Language.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
