--- a/LinqClasses/LinqClasses.csproj
+++ b/LinqClasses/LinqClasses.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Gender.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RectangleField.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
