--- a/LinqTasks/LinqTasks.csproj
+++ b/LinqTasks/LinqTasks.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LinqClasses\LinqClasses.csproj">
+      <Project>{1985d960-c10f-4a72-a3be-8fa9fccf40a7}</Project>
+      <Name>LinqClasses</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
