--- a/LotrBattle/LotrBattle.csproj
+++ b/LotrBattle/LotrBattle.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{60615900-AB7B-444B-94F8-722D0890DFD5}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{48DB710C-E582-4028-829B-4B17F10942B4}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LotrEntities</RootNamespace>
-    <AssemblyName>LotrEntities</AssemblyName>
+    <RootNamespace>LotrBattle</RootNamespace>
+    <AssemblyName>LotrBattle</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -36,41 +39,51 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Armors\ArmorType.cs" />
-    <Compile Include="Armors\ElvenArmor.cs" />
-    <Compile Include="Armors\MagicalNecklace.cs" />
-    <Compile Include="Armors\Shield.cs" />
-    <Compile Include="WarriorFactory.cs" />
-    <Compile Include="Warriors\BattleHelper.cs" />
-    <Compile Include="Warriors\HumanWarrior.cs" />
-    <Compile Include="Warriors\HobbitWarrior.cs" />
-    <Compile Include="Warriors\DwarfWarrior.cs" />
-    <Compile Include="Warriors\ElfArcher.cs" />
-    <Compile Include="Weapons\Bow.cs" />
-    <Compile Include="Weapons\DamageType.cs" />
-    <Compile Include="Dwarf.cs" />
-    <Compile Include="Elf.cs" />
-    <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="Hobbit.cs" />
-    <Compile Include="HobbitClan.cs" />
-    <Compile Include="Human.cs" />
-    <Compile Include="Armors\IArmor.cs" />
-    <Compile Include="IMortal.cs" />
-    <Compile Include="IUrukHaiMaster.cs" />
-    <Compile Include="Weapons\IWeapon.cs" />
-    <Compile Include="Maia.cs" />
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SlaverMaia.cs" />
-    <Compile Include="UrukHai.cs" />
-    <Compile Include="Vala.cs" />
-    <Compile Include="Warriors\IWarrior.cs" />
-    <Compile Include="Weapon.cs" />
-    <Compile Include="Weapons\Staff.cs" />
-    <Compile Include="Weapons\Sword.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LotrEntities\LotrEntities.csproj">
+      <Project>{60615900-ab7b-444b-94f8-722d0890dfd5}</Project>
+      <Name>LotrEntities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
